@@ -558,6 +558,7 @@ init_validator ()
                          "|(export_port_list)"
                          "|(export_preference_file)"
                          "|(export_report_format)"
+                         "|(export_targets)"
                          "|(get_agent)"
                          "|(get_agents)"
                          "|(get_config)"
@@ -1707,6 +1708,10 @@ exec_omp_get (struct MHD_Connection *connection,
   else if (!strcmp (cmd, "export_report_format"))
     return export_report_format_omp (credentials, params, content_type,
                                      content_disposition, response_size);
+
+  else if (!strcmp (cmd, "export_targets"))
+    return export_targets_omp (credentials, params, content_type,
+                               content_disposition, response_size);
 
   ELSE (get_agents)
 
